2007-03-04  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb.el (bbdb-pop-up-bbdb-buffer): Rewrote the function to
	use PREDICATE regardless of the split mode selected by
	`bbdb-use-pop-up'.
	
	`bbdb-use-pop-up' can be used to select the split mode.  

	Also added the new variable `bbdb-pop-up-target-columns' which is
	the number of columns for the BBDB buffer window when splitting
	vertically.  

2007-02-18  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb.el (bbdb-quiet-about-name-mismatches): Can be
	a function or sexp to allow user tweak-able name updates.  

2007-02-14  Robert Widhopf-Fenk  <fenk@forwiss.de>

	* lisp/bbdb.el (bbdb-use-pop-up): Changed the default to 'horiz.
	(bbdb-pop-up-display-layout):  Changed the default to 'one-line.
	Some code linting here and there.

	* lisp/bbdb-com.el (bbdb-complete-name-allow-cycling): changed
	default to t.
	(bbdb-get-only-first-address-p): changed default to nil.
	(bbdb-get-addresses): Added a doc string.

2007-02-06  Robert Widhopf-Fenk  <bbdb@robf.de>

	* Added support for completion on "lastname firstname".  Before
	completion only worked on "first lastname". Eventually one will
	get more choices now!  The order of "firstname lastname" in the
	completions buffer is still preserved, which might look a bit
	odd. 

2007-02-03  Tom Tromey  <tromey@redhat.com>

	* lisp/Makefile.in (bbdb-hooks.elc): Put lisp on a single line.

2007-01-01  Waider  <waider@waider.ie>

	* lisp/bbdb.el:
	fixed version of primep (Patrick Campbell-Preston)

2006-12-15  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb-com.el (bbdb-display-completion-list):  Bugfix for
	correctly replacing completed string in GNU Emacs when selection 
	a completion for bbdb-complete-name from the completions buffer.
	This fixes the bug reported by Svend Tollak Munk.

2006-05-26  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb-snarf.el (bbdb-snarf-region): Bugfix where snarfing on
	a region only containing a net caused an infinite loop.  Also try